--- a/_includes/about/timeline.html
+++ b/_includes/about/timeline.html
@@ -3,9 +3,11 @@
     {% for item in site.data.timeline %}
       <div class="timeline-item">
         <div class="content">
+          <!-- <img id="{{ item.company-logo }}-img" width="100px" class="card-img-top" src="{{ item.company-logo }}" alt="{{ item.company }}" /> -->
+          <h3>{{ item.company }}</h3>
           <h2>{{ item.title }}</h2>
           <h6 class="date">{{ item.from }} — {{ item.to }}</h6>
-          <p>{{ item.description }}</p>
+          {{ item.description }}
         </div>
       </div>
     {% endfor %}
