some posts updates

--- a/_includes/blog/post-card.html
+++ b/_includes/blog/post-card.html
@@ -29,6 +29,12 @@
   <a href="{{ post_url }}" class="post card {{ card_style }}" {%- if post.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>
     <div class="card-body {{ text_style }}">
       <h3 class="card-title">{{ post.title }}</h3>
+
+    {%- if post.image -%}
+      <img style="margin-bottom:12px; width: 100%; height: 200px; object-fit: cover;" src='{{ post.image }}'/>
+    {%- endif -%}
+
+
       <p class="card-text">
         {% for tag in post.tags %}
         <span class="badge {{ badge_style }}">{{ tag }}</span>
